# SOUP_ASR

./: pyproject.toml
src/: main.py
src/core/: __init__.py  api.py  asr.py
